--- a/RMTV-recorder/RMTV-recorder.csproj
+++ b/RMTV-recorder/RMTV-recorder.csproj
@@ -174,6 +174,8 @@
     <Resource Include="Resource\icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resource\stop.png" />
+    <Resource Include="Resource\tv.png" />
     <Resource Include="Resource\log_small.png" />
     <Resource Include="Resource\add.png" />
     <Resource Include="Resource\delete.png" />
