--- a/RMTV-recorder/RMTV-recorder.csproj
+++ b/RMTV-recorder/RMTV-recorder.csproj
@@ -174,6 +174,7 @@
     <Resource Include="Resource\icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resource\info.png" />
     <Resource Include="Resource\stop.png" />
     <Resource Include="Resource\tv.png" />
     <Resource Include="Resource\log_small.png" />
@@ -182,7 +183,7 @@
     <Content Include="Resource\bin\ffmpeg.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Resource Include="Resource\info.png" />
+    <Resource Include="Resource\timetable.png" />
     <Resource Include="Resource\local.png" />
     <Resource Include="Resource\spain.png" />
   </ItemGroup>
