--- a/RMTV-recorder/RMTV-recorder.csproj
+++ b/RMTV-recorder/RMTV-recorder.csproj
@@ -40,10 +40,14 @@
   <PropertyGroup>
     <ApplicationIcon>Resource\icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>RMTV_recorder.App</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -58,10 +62,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
+    <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </ApplicationDefinition>
+    </Page>
     <Compile Include="CommonUI\ShutDownDialog_UC.xaml.cs">
       <DependentUpon>ShutDownDialog_UC.xaml</DependentUpon>
     </Compile>
@@ -86,6 +90,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Include="Common\SingleInstance.cs" />
     <Page Include="CommonUI\Log_UC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
