--- a/RMTV-recorder/RMTV-recorder.csproj
+++ b/RMTV-recorder/RMTV-recorder.csproj
@@ -66,6 +66,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="CommonUI\Authentication_UC.xaml.cs">
+      <DependentUpon>Authentication_UC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CommonUI\Initialization_UC.xaml.cs">
       <DependentUpon>Initialization_UC.xaml</DependentUpon>
     </Compile>
@@ -80,9 +83,11 @@
     </Compile>
     <Compile Include="Common\CommonFunc.cs" />
     <Compile Include="Common\ContextMenuLeftClickBehavior.cs" />
+    <Compile Include="Common\DataGridBehavior.cs" />
     <Compile Include="Common\DownloadFile.cs" />
     <Compile Include="Common\IniHelper.cs" />
     <Compile Include="Common\Parameter.cs" />
+    <Compile Include="Common\M3U8.cs" />
     <Compile Include="Common\ScheduledTask.cs" />
     <Compile Include="Common\Clock.cs" />
     <Compile Include="CommonUI\winCustom.xaml.cs">
@@ -104,6 +109,10 @@
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
     <Compile Include="Common\SingleInstance.cs" />
+    <Page Include="CommonUI\Authentication_UC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
     <Page Include="CommonUI\Initialization_UC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -152,6 +161,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Style\Style.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -179,12 +192,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Resource\rmtv-en.m3u8">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Resource\rmtv-es.m3u8">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Resource\rmtv-en.m3u8" />
+    <None Include="Resource\rmtv-es.m3u8" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
